// order-service/proto/order.proto

syntax = "proto3";

package com.ta04.srv.order;

// Order is a message for order
message Order {
    int32 id = 1;
    int32 product_id = 2;
    int32 user_id = 3;
    bool status = 4;
}

// IndexOrderRequest is a message for IndexOrders
message IndexOrdersRequest {}

// Response is a response message
message Response {
    Order order = 1;
    Error error = 2;
    repeated Order orders = 3;
}

// Error is an error message
message Error {
    string code = 1;
    string message = 2;
}

// OrderService is a service for order-service
service OrderService {
    // IndexOrders is a method to index all orders
    rpc IndexOrders(IndexOrdersRequest) returns (Response) {}

    // ShowOrder is a method to show a order
    rpc ShowOrder(Order) returns (Response) {}

    // StoreOrder is a method to store a new order
    rpc StoreOrder(Order) returns (Response) {}

    // UpdateOrder is a method to update a order
    rpc UpdateOrder(Order) returns (Response) {}

    // DestroyOrder is a method to delete a order
    rpc DestroyOrder(Order) returns (Response) {}
}